--- a/_posts/2018-01-30-test.md
+++ b/_posts/2018-01-30-test.md
@@ -6,7 +6,7 @@ excerpt: "Machine Learning"
 mathjax: "true"
 ---
 
-# US Non-Profit - Data Cleaning and Anaylsis
+# Data Cleaning and Anaylsis
 
 ## Background
 Goal of this project is to better understand US Non-profit organizations and how they performed versus each other on income, revenue, and assets. Furthermore, we will look at the Top 10 Non-profits in the regions set up and Top 10 per state. The Dataset was obtained from Kaggle and contained information on US Non-profits broken up into three regions. We will analysis the data, isolate the info needed, and export data to be visualized in Tableau. 
