--- a/_posts/2018-01-30-test.md
+++ b/_posts/2018-01-30-test.md
@@ -20,7 +20,7 @@ ds3 = pd.read_csv('eo3.csv')
 
 ds1.head()
 ```
-![Non-profit](/Users/Jeff/Desktop/jeffponce.github.io/jeffponce.github.io/images/Non-profit/dc1.png)
+![Non-profit](_posts/images/Non-profit/dc1.png)
 
 
 
