--- a/_posts/2018-01-30-test.md
+++ b/_posts/2018-01-30-test.md
@@ -20,7 +20,8 @@ ds3 = pd.read_csv('eo3.csv')
 
 ds1.head()
 ```
-![Non-profit](https://raw.githubusercontent.com/jeffponce/jeffponce.github.io/master/_posts/images/Non-profit/dc1.png)| ![](https://raw.githubusercontent.com/jeffponce/jeffponce.github.io/master/_posts/images/Non-profit/dc1.png)
+![Non-profit](https://raw.githubusercontent.com/jeffponce/jeffponce.github.io/master/images/Non-profit/dc1.png)
+![Non-profit](https://raw.githubusercontent.com/jeffponce/jeffponce.github.io/master/images/Non-profit/dc2.png)
 
 
 
